--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,74 @@
-TOOLPATH	= ../z_tools/
-MAKE		= $(TOOLPATH)make.exe -r
-NASK		= $(TOOLPATH)nask.exe
-EDIMG		= $(TOOLPATH)edimg.exe
-QEMU		= qemu-system-i386 -fda
+TOOLPATH = ../z_tools/
+INCPATH  = ../z_tools/waldronos/
+
+MAKE     = $(TOOLPATH)make.exe -r
+NASK     = $(TOOLPATH)nask.exe
+CC1      = $(TOOLPATH)cc1.exe -I$(INCPATH) -Os -Wall -quiet
+GAS2NASK = $(TOOLPATH)gas2nask.exe -a
+OBJ2BIM  = $(TOOLPATH)obj2bim.exe
+BIM2HRB  = $(TOOLPATH)bim2hrb.exe
+RULEFILE = $(TOOLPATH)waldronos/haribote.rul
+EDIMG    = $(TOOLPATH)edimg.exe
+IMGTOL   = $(TOOLPATH)imgtol.com
+COPY     = cp
+DEL      = rm -rf
+
+default :
+	$(MAKE) img
 
 
-default :run Makefile
+ipl10.bin : ipl10.nas Makefile
+	$(NASK) ipl10.nas ipl10.bin ipl10.lst
 
-ipl.bin : ipl.nas Makefile
-	$(NASK) ipl.nas ipl.bin ipl.lst
+asmhead.bin : asmhead.nas Makefile
+	$(NASK) asmhead.nas asmhead.bin asmhead.lst
 
-waldronos.sys : waldronos.nas Makefile
-		$(NASK) waldronos.nas waldronos.sys waldronos.lst
-waldronos.img : ipl.bin waldronos.sys Makefile
-	$(EDIMG) imgin:../z_tools/fdimg0at.tek wbinimg src:ipl.bin len:512 from:0 to:0 copy from:waldronos.sys to:@: imgout:waldronos.img
+bootpack.gas : bootpack.c Makefile
+	$(CC1) -o bootpack.gas bootpack.c
 
+bootpack.nas : bootpack.gas Makefile
+	$(GAS2NASK) bootpack.gas bootpack.nas
 
-run: waldronos.img Makefile
-	$(QEMU) waldronos.img
+bootpack.obj : bootpack.nas Makefile
+	$(NASK) bootpack.nas bootpack.obj bootpack.lst
 
+bootpack.bim : bootpack.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:bootpack.bim stack:3136k map:bootpack.map \
+		bootpack.obj
+# 3MB+64KB=3136KB
 
-clean : 
-	rm -f ipl.bin ipl.lst waldronos.img waldronos.sys waldronos.lst
+bootpack.hrb : bootpack.bim Makefile
+	$(BIM2HRB) bootpack.bim bootpack.hrb 0
+
+waldronos.sys : asmhead.bin bootpack.hrb Makefile
+	cat  asmhead.bin bootpack.hrb > waldronos.sys
+
+waldronos.img : ipl10.bin waldronos.sys Makefile
+	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
+		wbinimg src:ipl10.bin len:512 from:0 to:0 \
+		copy from:waldronos.sys to:@: \
+		imgout:waldronos.img
+
+img :
+	$(MAKE) waldronos.img
+
+run :waldronos.img
+	qemu-system-i386 -fda waldronos.img
+install :
+	$(MAKE) img
+	$(IMGTOL) w a: waldronos.img
+
+clean :
+	-$(DEL) *.bin
+	-$(DEL) *.lst
+	-$(DEL) *.gas
+	-$(DEL) *.obj
+	-$(DEL) bootpack.nas
+	-$(DEL) bootpack.map
+	-$(DEL) bootpack.bim
+	-$(DEL) bootpack.hrb
+	-$(DEL) waldronos.sys
+
+src_only :
+	$(MAKE) clean
+	-$(DEL) waldronos.img
