--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
-OBJS_BOOTPACK = bootpack.obj graphic.obj naskfunc.obj dsctbl.obj hankaku.obj
+OBJS_BOOTPACK = bootpack.obj graphic.obj naskfunc.obj dsctbl.obj hankaku.obj int.obj
 
 TOOLPATH = ../z_tools/
 INCPATH  = ../z_tools/waldronos/
 DIYPATH  = ../diy_tools/
-MAKE     = make -r
+MAKE     = make -r 
 NASK     = $(TOOLPATH)nask.exe
 CC1      = $(TOOLPATH)cc1.exe -I$(INCPATH) -Os -Wall -quiet
 GAS2NASK = $(TOOLPATH)gas2nask.exe -a
@@ -18,7 +18,7 @@ COPY     = cp
 DEL      = rm -rf
 
 default : run
-#	$(MAKE) img
+	$(MAKE) 
 
 hankaku.c: hankaku.txt Makefile
 	python $(DIYPATH)fontmaker.py 
