--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-OBJS_BOOTPACK = bootpack.obj graphic.obj naskfunc.obj dsctbl.obj hankaku.obj int.obj
+OBJS_BOOTPACK = bootpack.obj graphic.obj naskfunc.obj dsctbl.obj hankaku.obj int.obj queue.obj 
 
 TOOLPATH = ../z_tools/
 INCPATH  = ../z_tools/waldronos/
