--- a/src/Makefile
+++ b/src/Makefile
@@ -25,6 +25,10 @@ default :
 	-$(MAKE) run -slient 
 	$(MAKE) clean -s
 
+hlt.wal : hlt.nas Makefile
+	$(NASK) hlt.nas hlt.wal hlt.lst
+
+
 hankaku.c: hankaku.txt Makefile
 	python $(DIYPATH)fontmaker.py 
 
@@ -66,7 +70,7 @@ bootpack.hrb : bootpack.bim Makefile
 waldronos.sys : asmhead.bin bootpack.hrb Makefile
 	cat  asmhead.bin bootpack.hrb > waldronos.sys
 
-waldronos.img : ipl10.bin waldronos.sys Makefile
+waldronos.img : ipl10.bin waldronos.sys hlt.wal Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:waldronos.sys to:@: \
@@ -74,6 +78,7 @@ waldronos.img : ipl10.bin waldronos.sys Makefile
 		copy from:bootpack.c to:@: \
 		copy from:hankaku.txt to:@: \
 		copy from:note.md to:@: \
+		copy from:hlt.wal to:@: \
 		imgout:waldronos.img
 
 img : 
