--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,8 @@ default :
 hlt.wal : hlt.nas Makefile
 	$(NASK) hlt.nas hlt.wal hlt.lst
 
+helloa.wal : hlt.nas Makefile
+	$(NASK) helloa.nas helloa.wal helloa.lst
 
 hankaku.c: hankaku.txt Makefile
 	python $(DIYPATH)fontmaker.py 
@@ -70,7 +72,7 @@ bootpack.hrb : bootpack.bim Makefile
 waldronos.sys : asmhead.bin bootpack.hrb Makefile
 	cat  asmhead.bin bootpack.hrb > waldronos.sys
 
-waldronos.img : ipl10.bin waldronos.sys hlt.wal Makefile
+waldronos.img : ipl10.bin waldronos.sys hlt.wal helloa.wal Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:waldronos.sys to:@: \
@@ -79,6 +81,7 @@ waldronos.img : ipl10.bin waldronos.sys hlt.wal Makefile
 		copy from:hankaku.txt to:@: \
 		copy from:note.md to:@: \
 		copy from:hlt.wal to:@: \
+		copy from:helloa.wal to:@: \
 		imgout:waldronos.img
 
 img : 
