--- a/src/Makefile
+++ b/src/Makefile
@@ -31,6 +31,12 @@ bug1.bim : bug1.obj a_nask.obj Makefile
 bug1.hrb : bug1.bim Makefile
 	$(BIM2HRB) bug1.bim bug1.hrb 0
 
+bug2.bim : bug2.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:bug2.bim map:bug1.map bug2.obj a_nask.obj
+
+bug2.hrb : bug2.bim Makefile
+	$(BIM2HRB) bug2.bim bug2.hrb 0
+
 
 hankaku.c: hankaku.txt Makefile
 	python $(DIYPATH)fontmaker.py 
@@ -73,7 +79,7 @@ bootpack.hrb : bootpack.bim Makefile
 waldronos.sys : asmhead.bin bootpack.hrb Makefile
 	cat  asmhead.bin bootpack.hrb > waldronos.sys
 
-waldronos.img : ipl10.bin waldronos.sys bug1.hrb Makefile
+waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:waldronos.sys to:@: \
@@ -82,6 +88,7 @@ waldronos.img : ipl10.bin waldronos.sys bug1.hrb Makefile
 		copy from:hankaku.txt to:@: \
 		copy from:note.md to:@: \
 		copy from:bug1.hrb to:@: \
+		copy from:bug2.hrb to:@: \
 		imgout:waldronos.img
 
 img : 
