--- a/src/Makefile
+++ b/src/Makefile
@@ -32,11 +32,16 @@ bug1.hrb : bug1.bim Makefile
 	$(BIM2HRB) bug1.bim bug1.hrb 0
 
 bug2.bim : bug2.obj a_nask.obj Makefile
-	$(OBJ2BIM) @$(RULEFILE) out:bug2.bim map:bug1.map bug2.obj a_nask.obj
+	$(OBJ2BIM) @$(RULEFILE) out:bug2.bim map:bug2.map bug2.obj a_nask.obj
 
 bug2.hrb : bug2.bim Makefile
 	$(BIM2HRB) bug2.bim bug2.hrb 0
 
+hello.bim : hello.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:hello.bim map:hello.map hello.obj a_nask.obj
+
+hello.hrb : hello.bim Makefile
+	$(BIM2HRB) hello.bim hello.hrb 0
 
 hankaku.c: hankaku.txt Makefile
 	python $(DIYPATH)fontmaker.py 
@@ -79,7 +84,7 @@ bootpack.hrb : bootpack.bim Makefile
 waldronos.sys : asmhead.bin bootpack.hrb Makefile
 	cat  asmhead.bin bootpack.hrb > waldronos.sys
 
-waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb Makefile
+waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb hello.hrb  Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:waldronos.sys to:@: \
@@ -89,6 +94,7 @@ waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb Makefile
 		copy from:note.md to:@: \
 		copy from:bug1.hrb to:@: \
 		copy from:bug2.hrb to:@: \
+		copy from:hello.hrb to:@: \
 		imgout:waldronos.img
 
 img : 
