--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,12 @@ bug2.bim : bug2.obj a_nask.obj Makefile
 bug2.hrb : bug2.bim Makefile
 	$(BIM2HRB) bug2.bim bug2.hrb 0
 
+winhelo.bim : winhelo.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:winhelo.bim stack:1k map:winhelo.map winhelo.obj a_nask.obj
+
+winhelo.hrb : winhelo.bim Makefile
+	$(BIM2HRB) winhelo.bim winhelo.hrb 0
+
 hello.bim : hello.obj a_nask.obj Makefile
 	$(OBJ2BIM) @$(RULEFILE) out:hello.bim stack:1k map:hello.map hello.obj a_nask.obj
 
@@ -90,7 +96,7 @@ bootpack.hrb : bootpack.bim Makefile
 waldronos.sys : asmhead.bin bootpack.hrb Makefile
 	cat  asmhead.bin bootpack.hrb > waldronos.sys
 
-waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb hello.hrb helloa.hrb Makefile
+waldronos.img : ipl10.bin waldronos.sys winhelo.hrb bug1.hrb bug2.hrb hello.hrb helloa.hrb Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:waldronos.sys to:@: \
@@ -102,6 +108,7 @@ waldronos.img : ipl10.bin waldronos.sys bug1.hrb bug2.hrb hello.hrb helloa.hrb M
 		copy from:bug2.hrb to:@: \
 		copy from:hello.hrb to:@: \
 		copy from:helloa.hrb to:@: \
+		copy from:winhelo.hrb to:@: \
 		imgout:waldronos.img
 
 img : 
